fixed branhc name

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,7 +3,7 @@ name: 🚀 Full WordPress Deploy to cPanel (Files + Database)
 on:
   push:
     branches:
-      - master
+      - main
 
 jobs:
   deploy:
